@@ -74,6 +74,32 @@ class CDbCriteria
 	}
 
 	/**
+	 * Appends a condition to the existing {@link condition}.
+	 * The new condition and the existing condition will be concatenated via the specified operator
+	 * which defaults to 'AND'.
+	 * The new condition can also be an array. In this case, all elements in the array
+	 * will be concatenated together via the operator.
+	 * This method handles the case when the existing condition is empty.
+	 * After calling this method, the {@link condition} property will be modified.
+	 * @param mixed the new condition. It can be either a string or an array of strings.
+	 * @param string the operator to join different conditions. Defaults to 'AND'.
+	 * @since 1.0.9
+	 */
+	public function addCondition($condition,$operator='AND')
+	{
+		if(is_array($condition))
+		{
+			if($condition===array())
+				return;
+			$condition='('.implode(') '.$operator.' (',$condition).')';
+		}
+		if($this->condition==='')
+			$this->condition=$condition;
+		else
+			$this->condition='('.$this->condition.') '.$operator.' ('.$condition.')';
+	}
+
+	/**
 	 * Merges with another criteria.
 	 * In general, the merging makes the resulting criteria more restrictive.
 	 * For example, if both criterias have conditions, they will be 'AND' together.
